--- a/src/scss/h.scss
+++ b/src/scss/h.scss
@@ -1,8 +1,10 @@
+@import "./functions/responsive-font-size";
+
 .solution{
   &_h1{
     font-family: 'Gotham Pro', serif;
     font-weight: bold;
-    font-size: 57px;
+    font-size: responsive-font-size(10px,57px);
     line-height: 64px;
     text-transform: uppercase;
     color: #FFFFFF;
@@ -10,7 +12,7 @@
   &_h3{
     padding-top: 46px;
     font-weight: 200;
-    font-size: 20px;
+    font-size: responsive-font-size(10px,20px);
     line-height: 24px;
     text-transform: uppercase;
 
