--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,6 +8,8 @@
 @import "./h";
 @import "./media";
 @import "./burger";
+@import "./secondPage";
+@import "./Card";
 .container {
   max-width: 1470px;
   margin: 0 auto;
