--- a/src/scss/secondPage.scss
+++ b/src/scss/secondPage.scss
@@ -157,4 +157,9 @@ hr {
   .vector {
     display: none;
   }
+  .SecondPage_title {
+    width: 100%;
+    display: flex;
+  justify-content: center;
+  }
 }
