3 section without adaptive

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -56,3 +56,12 @@
 .pb30{
   padding-bottom: 30px;
 }
+.hr-ihre{
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  top: 100%;
+}
+body{
+  background: linear-gradient(to bottom, white, #d7e2ff);
+}
