--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,8 +8,9 @@
 @import "./h";
 @import "./media";
 @import "./burger";
-@import "./secondPage";
 @import "./Card";
+@import "./slider";
+@import "./trust";
 .container {
   max-width: 1470px;
   margin: 0 auto;
