--- a/src/scss/Card.scss
+++ b/src/scss/Card.scss
@@ -107,12 +107,12 @@
 }
 .second_title {
   padding-top: 100px;
+  position: relative;
   padding-bottom: 50px;
 
 }
 .SecondPage_title {
   margin: 0 auto;
-  font-family: 'TT Travels Trl';
   font-style: normal;
   font-weight: 900;
   font-size: responsive-font-size(10px, 30px);
@@ -137,6 +137,7 @@ hr {
 }
 
 .second_subtext {
+  text-align: center;
   position: absolute;
   left:50%;
   transform:translate(-50%, -50%);
@@ -151,6 +152,7 @@ hr {
   font-size: responsive-font-size(20px, 64px);
 }
 .cards {
+    padding-top: 100px;
     display: flex;
     gap: 120px;
     flex-direction: column;
