--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,6 +11,7 @@
 @import "./Card";
 @import "./slider";
 @import "./trust";
+@import "./client";
 .container {
   max-width: 1470px;
   margin: 0 auto;
