--- a/src/scss/trust.scss
+++ b/src/scss/trust.scss
@@ -1,4 +1,8 @@
+@import "./functions/responsive-font-size";
 .trust{
+  &_container{
+    padding: 20px;
+  }
   &_p{
     font-size: 20px;
     line-height: 24px;
@@ -10,10 +14,10 @@
     padding-bottom: 10px;
   }
   &_secp{
-    font-size: 28px;
+    font-size:responsive-font-size(14px,26px);
     line-height: 34px;
     text-align: center;
-    font-weight: 500;
+    font-weight: 900;
     color: #000000;
   }
   &_h3{
