--- a/src/scss/functions/responsive-width.scss
+++ b/src/scss/functions/responsive-width.scss
@@ -5,15 +5,15 @@
 
   // Визначаємо стилі для різних точок злому
   @media (min-width: 576px) {
-    width: 50%;
+    width: 50% !important;
   }
 
   @media (min-width: 768px) {
-    width: 33.33%;
+    width: 33.33% !important;
   }
 
   @media (min-width: 992px) {
-    width: 25%;
+    width: 25% !important;
   }
 
   @media (min-width: 1200px) {
