--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,6 +12,7 @@
 @import "./slider";
 @import "./trust";
 @import "./client";
+@import "./secondSection";
 .container {
   max-width: 1470px;
   margin: 0 auto;
