--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -77,3 +77,15 @@ body{
 .mb20{
   margin-bottom: 20px;
 }
+.pb120{
+  padding-bottom: 120px;
+}
+.p100{
+  padding: 100px;
+}
+.pt100{
+  padding-top: 100px;
+}
+.pb20{
+  padding-bottom: 20px;
+}
