--- a/src/scss/h.scss
+++ b/src/scss/h.scss
@@ -19,3 +19,9 @@
     color: #FFFFFF;
   }
 }
+.client_h4{
+  text-align: center;
+  margin-top: 14px;
+  margin-bottom: 26px;
+  font-size: 20px;
+}
