--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,6 +13,8 @@
 @import "./trust";
 @import "./client";
 @import "./secondSection";
+@import "./text";
+@import "./divider";
 .container {
   max-width: 1470px;
   margin: 0 auto;
